fixed overlay so it overflows

--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -88,7 +88,7 @@
 }
 
 .overlay{
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   height: 100vh;
